# datastar-event-demo

./: .gitignore  Dockerfile  README.md  build.sh  main.py  pyproject.toml  requirements.txt  start.sh
app/: main.py
app/templates/general_pages/: homepage.html
datastar/: jinja2.py  settings.py  urls.py
ds/: views.py
jinja2/: index.html
static/books/: the-secret-of-chimneys--agatha-christie.txt
static/css/: style.css
static/js/: book-reader.js
static/uswds/css/: uswds.css
templates/: base.html  header.html  index.html
templates/about/: backend.html  datastar.html  events.html  uswds.html
templates/demos/: story-time.html
