[project]
name = "datastar-django-example"
version = "1.0.0"
description = "Datastar Example Django Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "daphne>=4.2.0",
    "datastar-py>=0.4.4",
    "django>=5.2.1",
    "jinja2>=3.1.6",
]

[tool.poetry]
version = "1.0.0"

[tool.uv.sources]
datastar-py = { path = "./ds-sdk/" }
