[project]
name = "datastar-events-demo"
version = "1.0.0"
description = "Datastar Example FastAPI Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datastar-py>=0.5.0",
    "fastapi[standard]>=0.116.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
datastar-py = { path = "./ds-sdk/" }

[tool.uv.workspace]
members = [
    "app",
]
